# quackaloger

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docker/: entrypoint.sh
quackaloger/: __init__.py  __main__.py  cli.py  config.py  constants.py  discovery.py  env_warnings.py  fileops.py  history.py  identification.py  llm.py  llm_models.py  metadata.py  models.py  pathing.py  plex_discovery.py  plex_format.py  reporting.py  resolver.py  runner.py  service.py  theme.py  tmdb.py  ui.py  user_config.py  wizard.py
quackaloger/domains/: __init__.py  audiobooks.py  base.py  plex_movies.py  plex_tv.py  stub_print.py
quackaloger/web/: __init__.py  actions.py  app.py  jobs.py  state.py  watcher.py
quackaloger/web/static/: app.css
quackaloger/web/templates/: base.html  dashboard.html  job.html  library_form.html  message.html  plan_review.html  runs.html  settings.html
tests/: test_discovery_audit.py  test_runner_merge.py  test_service_execute.py  test_web_browse.py  test_web_state.py  test_web_watcher.py
unraid/: quackaloger.xml
