[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quackaloger"
version = "1.0.0"
description = "Organize audiobook libraries for Audiobookshelf"
requires-python = ">=3.10"
dependencies = [
    "mutagen",
    "requests",
    "PyYAML",
    "openai",
    "anthropic>=0.40.0",
    "rich",
    "questionary",
    "pyfiglet",
]

[project.optional-dependencies]
web = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "python-multipart",
    "watchdog",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["quackaloger*"]

[tool.setuptools.package-data]
"quackaloger.web" = ["templates/*.html", "static/*"]

[project.scripts]
quackaloger = "quackaloger.cli:main"
quackaloger-web = "quackaloger.web.app:main"
